--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-api-bdd-test",
+  "name": "api-bdd",
   "version": "1.0.0",
   "description": "This README would normally document whatever steps are necessary to get your application up and running.",
   "main": "index.js",
@@ -8,13 +8,8 @@
     "lint": "standard",
     "test": "cross-env NODE_ENV=TEST mocha --config test/.mocharc.unit.json --exit"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@bitbucket.org/joaopaulolazari/premium-minds.git"
-  },
   "author": "João Paulo De Lazari",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/joaopaulolazari/premium-minds#readme",
   "devDependencies": {
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
